fix name being cut off in rendered canvas image

--- a/www/wiki.css
+++ b/www/wiki.css
@@ -109,6 +109,10 @@ https://brotato.wiki.spellsandguns.com/MediaWiki:Common.js
 	font-weight: bold;
 }
 
+.ibox__top-right {
+	width: 100%;
+}
+
 .ibox__type {
 	font-size: 17px;
 }
